Adding GraalVM native image support
# Conflicts:
#	prj/coherence-testing-support/src/main/java/com/oracle/coherence/testing/AbstractTestInfrastructure.java

--- a/prj/coherence-cdi-server/pom.xml
+++ b/prj/coherence-cdi-server/pom.xml
@@ -97,6 +97,12 @@
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
 
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
       <!-- run integration tests *Tests.java and *IT.java -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
