--- a/prj/coherence-core-components/pom.xml
+++ b/prj/coherence-core-components/pom.xml
@@ -42,6 +42,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.graalvm.sdk</groupId>
+      <artifactId>graal-sdk</artifactId>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+
     <!-- JCA -->
     <dependency>
       <groupId>jakarta.resource</groupId>
@@ -95,6 +102,12 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
       </plugin>
     </plugins>
   </build>
