--- a/prj/coherence-concurrent/pom.xml
+++ b/prj/coherence-concurrent/pom.xml
@@ -136,6 +136,12 @@
       </plugin>
 
       <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <executions>
           <execution>
