--- a/prj/coherence-core/pom.xml
+++ b/prj/coherence-core/pom.xml
@@ -217,6 +217,12 @@
       </plugin>
 
       <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
+      <plugin>
         <groupId>com.oracle.coherence.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
         <executions>
