--- a/prj/coherence-grpc/pom.xml
+++ b/prj/coherence-grpc/pom.xml
@@ -208,6 +208,12 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
       <!-- maven-bundle-pugin for generating manifest with metadata -->
       <plugin>
         <groupId>org.apache.felix</groupId>
