--- a/prj/coherence-jpa/pom.xml
+++ b/prj/coherence-jpa/pom.xml
@@ -123,6 +123,11 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
     </plugins>
   </build>
 
