--- a/prj/coherence-json/pom.xml
+++ b/prj/coherence-json/pom.xml
@@ -245,6 +245,12 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
     </plugins>
   </build>
 
