--- a/prj/coherence-lucene/pom.xml
+++ b/prj/coherence-lucene/pom.xml
@@ -130,6 +130,12 @@
       </plugin>
 
       <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <executions>
