--- a/prj/coherence-management/pom.xml
+++ b/prj/coherence-management/pom.xml
@@ -127,6 +127,12 @@
       </plugin>
 
       <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <executions>
