--- a/prj/coherence-testing-data/pom.xml
+++ b/prj/coherence-testing-data/pom.xml
@@ -33,6 +33,13 @@
       <artifactId>coherence</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.graalvm.sdk</groupId>
+      <artifactId>graal-sdk</artifactId>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+
     <!-- JSON-B -->
     <dependency>
       <groupId>jakarta.json.bind</groupId>
@@ -97,6 +104,12 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
       </plugin>
     </plugins>
   </build>
