--- a/prj/coherence-tracing/opentracing/pom.xml
+++ b/prj/coherence-tracing/opentracing/pom.xml
@@ -48,6 +48,12 @@
         <groupId>com.oracle.coherence.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
+
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
     </plugins>
   </build>
 
