--- a/prj/test/functional/aggregator/pom.xml
+++ b/prj/test/functional/aggregator/pom.xml
@@ -32,6 +32,7 @@
 
   <properties>
     <testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
+    <mainClass>com.oracle.coherence.testing.NaiveApplication.class</mainClass>
   </properties>
 
   <dependencies>
