--- a/prj/pom.xml
+++ b/prj/pom.xml
@@ -1166,7 +1166,7 @@
 
     <repository>
       <id>snapshots-repo</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://central.sonatype.com/repository/maven-snapshots</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -1216,7 +1216,7 @@
     <!-- required for custom Moditect plugin -->
     <pluginRepository>
       <id>snapshots-repo</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://central.sonatype.com/repository/maven-snapshots</url>
       <releases>
         <enabled>false</enabled>
       </releases>
