Add native plugin generateResourceConfig to test modules that are used as dependencies of other test modules

--- a/prj/test/functional/grpc-proxy-tck/pom.xml
+++ b/prj/test/functional/grpc-proxy-tck/pom.xml
@@ -133,6 +133,11 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
 
       <plugin>
         <groupId>com.oracle.coherence.moditect</groupId>
