--- a/prj/test/functional/ssl/pom.xml
+++ b/prj/test/functional/ssl/pom.xml
@@ -49,6 +49,13 @@
 
   <build>
     <plugins>
+
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
