--- a/prj/test/functional/grpc-client-tck-21/pom.xml
+++ b/prj/test/functional/grpc-client-tck-21/pom.xml
@@ -109,6 +109,12 @@
       </plugin>
 
       <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+
+      <plugin>
         <groupId>com.oracle.coherence.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
