--- a/prj/test/functional/wls-management/pom.xml
+++ b/prj/test/functional/wls-management/pom.xml
@@ -22,6 +22,7 @@
 
   <properties>
     <moditect.skip>true</moditect.skip>
+    <skip.native.tests>true</skip.native.tests>
     <testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
   </properties>
 
